# gravitas-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: friction.rs  gravity.rs  lib.rs  pager.rs  scroll.rs  simulation.rs  spring.rs
tests/: friction.rs  gravity.rs  spring.rs
