[package]
name = "gravitas"
description = "one dimensional physics equations for ui"
version = "0.1.1"
authors = ["Ralph Thomas <ralpht@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/iamralpht/gravitas-rs"
repository = "https://github.com/iamralpht/gravitas-rs.git"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
